--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -1,5 +1,5 @@
 <header
-  class="fixed w-full flex items-center justify-between bg-slate-100 px-8 py-5 shadow-sm"
+  class="fixed w-full flex items-center justify-between bg-zinc-100 px-8 py-5 shadow-sm"
   :class="open ? 'rounded-br-3xl' : 'rounded-b-3xl '"
 >
   <div class="flex w-full flex-col justify-between md:flex-row">
