--- a/core/templates/core/perfil.html
+++ b/core/templates/core/perfil.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
   </section>
-  <article class="grid grid-cols-2 gap-6">
+  <article class="mb-2 grid grid-cols-2 gap-6">
     <section>
       <h2 class="text-xl font-semibold text-color-secondary">
         Informações Pessoais
