--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load permission_tags %}
 <nav
   id="navbar"
   class="sticky left-0 top-0 flex flex-col justify-between overflow-y-auto rounded-br-xl bg-color-primary py-5 text-slate-100 transition-all"
@@ -20,6 +21,7 @@
       </span>
     </header>
     <ul class="flex flex-col gap-4" :class="open || 'scale-0'">
+      
       <li>
         <a href="{% url 'dashboard' %}">
           <svg
@@ -54,6 +56,42 @@
             />
           </svg>
           <span>Dashboard</span>
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'courses' %}">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z"
+            />
+          </svg>
+          <span>Cursos</span>
+        </a>
+      </li>
+      <li>
+        <a href="{% url 'classrooms' %}">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z"
+            />
+          </svg>
+          <span>Turmas</span>
         </a>
       </li>
       <li>
