--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -5,34 +5,47 @@
 {% endblock %} {% block content %}
 <main x-data="dashboard">
   <h1 class="m-5 text-2xl font-bold">Dashboard</h1>
-  <header id="sectors" class="bg-slate-300 p-5">
+  <header id="sectors" class="bg-color-bg-alt p-5">
     {% csrf_token %}
     <ul id="sectors" class="flex select-none gap-4">
       <li
-        class="control bg-gray-200"
+        class="control bg-color-bg"
         @click="reload('students', 'Alunos', `{% url 'query' 'student' '1' %}`)"
         x-init="reload('students', 'Alunos', `{% url 'query' 'student' '1' %}`)"
       >
         Alunos
       </li>
       <li
-        class="control bg-gray-200"
+        class="control bg-color-bg"
         data-section="teachers"
         @click="reload('teachers', 'Professores', `{% url 'query' 'teacher' '1' %}`)"
       >
         Professores
       </li>
-      <li class="control bg-gray-200">
+      <li class="control bg-color-bg">
         <a href="{% url 'courses' %}">Cursos</a>
       </li>
-      <li class="control bg-gray-200">
+      <li class="control bg-color-bg">
         <a href="{% url 'classrooms' %}">Turmas</a>
       </li>
       {% if user|can:'create_user' %}
-      <li class="btn control bg-cyan-600">
+      <li class="btn control bg-color-primary-dimm">
         <a href="{% url 'enroll' %}" class="flex items-center font-semibold">
           <span class="mr-1 font-semibold">Matricular</span>
-          <box-icon name="user-plus" color="white" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.8"
+            stroke="currentColor"
+            class="h-6 w-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M19 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zM4 19.235v-.11a6.375 6.375 0 0112.75 0v.109A12.318 12.318 0 0110.374 21c-2.331 0-4.512-.645-6.374-1.766z"
+            />
+          </svg>
         </a>
       </li>
       {% endif %} {% if user|can:'delete_user' %}
