--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -66,7 +66,7 @@ td {
 }
 
 .btn {
-  @apply rounded bg-cyan-700 px-3 py-2 text-slate-100 transition-all duration-300 hover:bg-cyan-800 hover:shadow-md disabled:bg-slate-600;
+  @apply rounded bg-color-primary-dimm px-3 py-2 text-slate-100 transition-all duration-300 hover:bg-sky-800 hover:shadow-md disabled:bg-slate-600;
 }
 
 nav#navbar::-webkit-scrollbar {
