--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,9 +1,8 @@
-{% load static %}
-{% load permission_tags %}
+{% load static %} {% load permission_tags %}
 <nav
   id="navbar"
   class="sticky left-0 top-0 flex flex-col justify-between overflow-y-auto rounded-br-xl bg-color-primary py-5 text-slate-100 transition-all"
-  :class="open ? 'w-80 px-5' : 'w-0 px-0'"
+  :class="open ? 'w-96 px-5' : 'w-0 px-0'"
 >
   <div>
     <header class="ml-3 flex items-center justify-start py-2">
@@ -21,7 +20,6 @@
       </span>
     </header>
     <ul class="flex flex-col gap-4" :class="open || 'scale-0'">
-      
       <li>
         <a href="{% url 'dashboard' %}">
           <svg
@@ -66,11 +64,12 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
+            class="h-6 w-6"
           >
             <path
               stroke-linecap="round"
               stroke-linejoin="round"
-              d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z"
+              d="M2.25 7.125C2.25 6.504 2.754 6 3.375 6h6c.621 0 1.125.504 1.125 1.125v3.75c0 .621-.504 1.125-1.125 1.125h-6a1.125 1.125 0 01-1.125-1.125v-3.75zM14.25 8.625c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v8.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 01-1.125-1.125v-8.25zM3.75 16.125c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v2.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 01-1.125-1.125v-2.25z"
             />
           </svg>
           <span>Cursos</span>
@@ -84,11 +83,12 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
+            class="h-6 w-6"
           >
             <path
               stroke-linecap="round"
               stroke-linejoin="round"
-              d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z"
+              d="M18 18.72a9.094 9.094 0 003.741-.479 3 3 0 00-4.682-2.72m.94 3.198l.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0112 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 016 18.719m12 0a5.971 5.971 0 00-.941-3.197m0 0A5.995 5.995 0 0012 12.75a5.995 5.995 0 00-5.058 2.772m0 0a3 3 0 00-4.681 2.72 8.986 8.986 0 003.74.477m.94-3.197a5.971 5.971 0 00-.94 3.197M15 6.75a3 3 0 11-6 0 3 3 0 016 0zm6 3a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0zm-13.5 0a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0z"
             />
           </svg>
           <span>Turmas</span>
