--- a/core/static/core/css/enroll.css
+++ b/core/static/core/css/enroll.css
@@ -3,5 +3,5 @@ form > section > article > * {
 }
 
 form section article {
-  @apply border border-slate-300 bg-slate-200 px-11 py-7;
+  @apply border border-slate-300 bg-gray-200 px-11 py-7;
 }
