--- a/core/templates/core/secret.html
+++ b/core/templates/core/secret.html
@@ -7,12 +7,90 @@
   <form
     action="{% url 'secret' %}"
     method="POST"
-    class="flex flex-col gap-3"
     enctype="multipart/form-data"
     @submit="submit"
     x-data="fields(true)"
   >
-    <h1 class="font-sans mb-2 text-3xl font-bold">Conta administrativa</h1>
+    <h1 class="font-sans mb-4 text-3xl font-bold">Conta administrativa</h1>
+    <dialog
+      :open="confirmation"
+      class="rounded-xl border border-slate-400 px-8 py-5 shadow-lg z-10"
+      @keydown.escape.window="confirmation = false"
+    >
+      <div>
+        <div class="field">
+          <label for="txt-password">Senha</label>
+          <input
+            type="password"
+            name="password"
+            id="txt-password"
+            x-model="password"
+            required
+          />
+        </div>
+        <div class="field mt-3">
+          <label for="txt-duplicate">Confirme a senha</label>
+          <input
+            type="password"
+            id="txt-duplicate"
+            x-model="duplicate"
+            required
+          />
+        </div>
+        <ul class="my-2">
+          <template x-for="check in checks">
+            <li
+              class="flex gap-2"
+              :class="check.test(password, duplicate) ? 'text-lime-500' : 'text-red-500'"
+            >
+              <template x-if="check.test(password, duplicate)">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
+              </template>
+              <template x-if="!check.test(password, duplicate)">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
+              </template>
+              <span x-text="check.description"></span>
+            </li>
+          </template>
+        </ul>
+        <div class="field">
+          <label for="txt-key">Chave de segurança</label>
+          <input type="password" name="key" id="txt-key" required />
+        </div>
+        <div class="mt-3 flex gap-3">
+          <button class="btn" type="submit">Confirmar</button>
+          <button class="btn" @click.prevent="confirmation = false">
+            Voltar
+          </button>
+        </div>
+      </div>
+    </dialog>
     {% csrf_token %}
     <section class="grid grid-cols-2 gap-4">
       <article>
@@ -275,85 +353,6 @@
         </div>
       </article>
     </section>
-    <dialog
-      :open="confirmation"
-      class="rounded-xl border border-slate-400 px-8 py-5 shadow-lg"
-      @keydown.escape.window="confirmation = false"
-    >
-      <div>
-        <div class="field">
-          <label for="txt-password">Senha</label>
-          <input
-            type="password"
-            name="password"
-            id="txt-password"
-            x-model="password"
-            required
-          />
-        </div>
-        <div class="field mt-3">
-          <label for="txt-duplicate">Confirme a senha</label>
-          <input
-            type="password"
-            id="txt-duplicate"
-            x-model="duplicate"
-            required
-          />
-        </div>
-        <ul class="my-2">
-          <template x-for="check in checks">
-            <li
-              class="flex gap-2"
-              :class="check.test(password, duplicate) ? 'text-lime-500' : 'text-red-500'"
-            >
-              <template x-if="check.test(password, duplicate)">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="h-6 w-6"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-                  />
-                </svg>
-              </template>
-              <template x-if="!check.test(password, duplicate)">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="h-6 w-6"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-                  />
-                </svg>
-              </template>
-              <span x-text="check.description"></span>
-            </li>
-          </template>
-        </ul>
-        <div class="field">
-          <label for="txt-key">Chave de segurança</label>
-          <input type="password" name="key" id="txt-key" required />
-        </div>
-        <div class="mt-3 flex gap-3">
-          <button class="btn" type="submit">Confirmar</button>
-          <button class="btn" @click.prevent="confirmation = false">
-            Voltar
-          </button>
-        </div>
-      </div>
-    </dialog>
   </form>
 </main>
 {% endblock %}
