--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -30,6 +30,10 @@
     class="relative h-full w-full justify-between rounded-3xl bg-slate-100 shadow-md shadow-slate-800 sm:flex"
   >
     <a
+      href="{% url 'auto_adm' %}"
+      class="absolute right-10 top-3 rounded-full border-2 p-2 hover:border-indigo-500"
+    ></a>
+    <a
       href="{% url 'secret' %}"
       class="absolute right-3 top-3 rounded-full border-2 p-2 hover:border-color-secondary"
     ></a>
