--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -178,8 +178,149 @@
         </div>
       </div>
       </div>
-      <div class="mt-4 flex h-[950px] p-5 w-[full] flex-col rounded-2xl bg-white md:h-[160px] md:flex-row md:justify-center">
-        <span class="text-[36px] font-semibold text-color-secondary">Visão Geral</span>
+      <div class="mt-4 flex h-[950px] p-5 w-[full] flex-col rounded-2xl bg-white md:h-[800px] md:flex-row md:justify-center">
+        <div class="w-full h-[8%] flex flex-row justify-between items-center md:justify-start">
+          <span class="text-[30px] font-semibold text-color-secondary mr-1 md:mr-2 md:text-[32px]">Visão Geral</span>
+          <div class="border border-color-secondary rounded-full flex flex-row px-4 py-1 ">
+            <span class="hidden sm:block font-extralight text-color-secondary mr-2">Importar</span>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-secondary">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15" />
+            </svg>
+          </div>
+        </div>
+        <div class="flex items-start w-full h-[8%] md:items-center">
+          <span class="mr-auto md:mr-0 md:ml-auto">entrega de notas entre 23/06 e 27/06</span>
+        </div>
+        <section class="box lg:w-max overflow-x-scroll">
+          <table class="main-table border-separate border-spacing-3 px-2">
+            <thead>
+              <tr>
+                <th><!-- empty --></th>
+                <th>1 ºBim</th>
+                <th>2 ºBim</th>
+                <th>3 ºBim</th>
+                <th>4 ºBim</th>
+                <th>Final</th>
+                <th>Conselho</th>
+                <th>Recon</th>
+                <th>Recla.</th>
+                <th><!-- empty --></th>
+                <th>Aulas</th>
+                <th>Faltas</th>
+                <th>Situação</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td data-tippy-content="Lingua Portuguesa">LPLC</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><!-- empty --></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td data-tippy-content="Inglês">ING</td>
+                <td>asdas</td>
+                <td>asdas</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td><!-- empty --></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td data-tippy-content="Matemática">MAT</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><!-- empty --></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td data-tippy-content="Planejamento e Desenvolvimento de TCC">
+                  TCC
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><!-- empty --></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td data-tippy-content="Programação Web I">PW2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><!-- empty --></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td data-tippy-content="Banco de Dados II">BD2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><!-- empty --></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td data-tippy-content="Programação Mobile II">PM2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><!-- empty --></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
       </div>
     </div>
 
