Integrated Azure Blobs

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -76,7 +76,7 @@
   </header>
   <section class="p-5">
     <h2 x-text="active" class="mb-4 text-xl font-semibold"></h2>
-    <table>
+    <table class="w-full">
       <thead>
         <tr>
           <template x-for="header in headers">
