--- a/communication/templates/communication/alert/alert.html
+++ b/communication/templates/communication/alert/alert.html
@@ -44,7 +44,7 @@
   </label>
   <input
     type="file"
-    name="users"
+    name="attachment"
     id="file-users"
     accept=".xls,.xlsx,.csv"
     @input="readFile"
