--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -236,7 +236,7 @@
     <hr />
     <ul class="flex flex-col gap-2">
       <li>
-        <a href="">
+        <a href="{% url 'alerts' %}">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
