--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -5,7 +5,9 @@
 <link rel="stylesheet" href="{% static 'core/css/turmaprofessores.css' %}" />
 
 {% endblock %} {% block content %}
-<main class="framed m-2 mb-20 px-5 md:m-8">
+<main class="framed m-2 mb-20 px-5 md:m-8"
+      x-data="{ createDialog: false }"
+>
   <h1
     class="mt-6 text-center text-[40px] font-bold text-color-secondary md:text-left"
   >
@@ -219,8 +221,150 @@
     </div>
 
     <div x-show.transition.in.opacity.duration.750ms="selected === 'option-2'" class="p-4">
-      Prova
+      <div class="flex flex-row w-full justify-between items-center text-center mt-4 mb-6">
+        <select name="Bimestre" class="w-64 h-10 rounded-full text-center">
+          <option>1ºBimestre</option>
+          <option>2ºBimestre</option>
+          <option>3ºBimestre</option>
+          <option>4ºBimestre</option>
+        </select>
+        <button @click="createDialog = true">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10 text-color-primary">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+      </button>
+      </div>
+      
+      <div
+      :class="createDialog ? 'flex' : 'hidden'"
+      class="fixed inset-0 items-center justify-center bg-black bg-opacity-25"
+    >
+      <div
+        class="h-[600px] w-[600px] overflow-y-scroll rounded-3xl bg-slate-400 pb-10"
+      >
+        <header class="mx-10 mb-3 mt-8 flex justify-between text-3xl font-bold">
+          <h2>Criar Avaliações</h2>
+          <div>
+            <button
+              @click.prevent="createDialog = false"
+              class="text-3xl font-bold text-color-primary"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M6 18L18 6M6 6l12 12"
+                />
+              </svg>
+            </button>
+          </div>
+        </header>
+        <section class="flex flex-col gap-3">
+          <div class="flex flex-col px-12 text-lg font-normal">
+            <label>Titulo:</label>
+            <input type="text" class="h-10" name="title" required />
+          </div>
+          <div
+            class="flex items-center gap-1 px-12 text-lg font-normal"
+            x-data="{ anexoMencao: 'Anexo' }"
+          >
+            <label>Data de Lançamento:</label>
+            <input
+              type="date"
+              :min="new Date().toISOString().split('T')[0]"
+              :value="new Date().toISOString().split('T')[0]"
+              name="date"
+            />
+            <label
+              for="file-picture"
+              class="btn ml-3 flex w-max cursor-pointer items-center gap-1"
+            >
+              <span
+                class="truncate"
+                x-text="anexoMencao ?? 'Foto de perfil'"
+              ></span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="2.2"
+                stroke="currentColor"
+                class="h-5 w-5"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
+                />
+              </svg>
+            </label>
+            <input
+              type="file"
+              name="image"
+              id="file-picture"
+              accept="image/*"
+              required
+              hidden
+              @input="imageName = $el.files[0].name"
+            />
+          </div>
+          <div class="flex- "></div>
+            <select name="Bimestre" class="w-64 h-10 rounded-full text-center">
+              <option>1ºBimestre</option>
+              <option>2ºBimestre</option>
+              <option>3ºBimestre</option>
+              <option>4ºBimestre</option>
+            </select>
+          <div class="flex h-full flex-col px-12 text-lg font-normal">
+            <label class="pb-2">Conteúdo:</label>
+            <textarea
+              class="h-[180px] w-full resize-none"
+              placeholder="Digite o Comunicado aqui"
+              name="info"
+              required
+            ></textarea>
+          </div>
+          <div class="flex items-center gap-1 px-12 text-lg font-normal">
+            <label>Apenas para professores:</label>
+            <input type="checkbox" name="staff_only" />
+          </div>
+          <div class="flex flex-col px-12 text-lg font-normal">
+            <label>Para o curso:</label>
+            <input
+              type="text"
+              class="h-10"
+              name="course"
+              placeholder="Deixe em branco para um comunicado geral"
+            />
+          </div>
+          <div class="flex flex-col px-12 text-lg font-normal">
+            <label>Para a turma:</label>
+            <input
+              type="text"
+              class="h-10"
+              name="course"
+              placeholder="Deixe em branco para um comunicado geral"
+            />
+          </div>
+          <div class="flex justify-center pt-6">
+            <button
+              type="submit"
+              class="h-12 w-32 rounded-full border-2 border-solid border-color-secondary text-2xl font-bold text-color-secondary transition hover:bg-color-hover"
+            >
+              Aplicar
+            </button>
+          </div>
+        </section>
+      </div>
     </div>
+  </div>
 
     <div x-show.transition.in.opacity.duration.750ms="selected === 'option-3'" class="p-4">
       Reposições
