--- a/core/templates/core/comunicados.html
+++ b/core/templates/core/comunicados.html
@@ -1,5 +1,5 @@
-{% extends 'core/base.html' %} {% load static %} {% load permission_tags %} {%
-block head %}
+{% extends 'core/base.html' %} {% load static %} {% load permission_tags %} 
+{% block head %}
 <title>Comunicados</title>
 {% endblock %} {% block content %}
 <main
