--- a/management/templates/management/schedules.html
+++ b/management/templates/management/schedules.html
@@ -209,9 +209,7 @@
               x-model="studentGroup"
             />
           </div>
-          <div>
-            <button type="submit" class="px-6 py-2">Salvar</button>
-          </div>
+          <button type="submit" class="px-6 py-2 mx-auto">Salvar</button>
         </section>
       </form>
     </section>
