--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -60,7 +60,7 @@
 <main class="flex flex-col gap-5 px-24 py-10" x-data="dialogs">
   <dialog :open="courseDialog">
     <header>
-      <h2">Criar curso</h2>
+      <h2>Criar curso</h2>
       <button @click.prevent="courseDialog = false">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -248,7 +248,7 @@
           maxlength="127"
         ></textarea>
       </div>
-      <div class="mt-3 flex gap-2">
+      <div class="mt-3 flex gap-2 justify-center">
         <button
           @click.prevent="() => { subjectDialog = false; importDialog = true }"
           class="alt"
