--- a/management/templates/management/classrooms.html
+++ b/management/templates/management/classrooms.html
@@ -143,7 +143,7 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="h-6 w-6"
+            class="h-6 w-6 hover:bg-gray-300 transition-all rounded-full"
           >
             <path
               stroke-linecap="round"
